--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,14 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Condensed|Ubuntu+Mono" rel="stylesheet">
     </head>
     <body>
         <p>Actual program</p>
         <canvas id="mainCanvas" width="800" height="600"></canvas>
         
-        
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/plugins.js"></script>
     </body>
 </html>
