--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,12 @@
         <title>Canvas</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Condensed|Ubuntu+Mono" rel="stylesheet">
     </head>
     <body>
-        <p>Actual program</p>
+        <h1>Canvas</h1>
         <canvas id="mainCanvas" width="800" height="600"></canvas>
         
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
