--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="">
+<html lang="en">
     <icon>
         
     </icon>
@@ -14,11 +14,9 @@
         <link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Condensed|Ubuntu+Mono" rel="stylesheet">
     </head>
     <body>
-        <h1>Canvas</h1>
         <canvas id="mainCanvas" width="800" height="600"></canvas>
         
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="js/main.js"></script>
-        <script src="js/plugins.js"></script>
     </body>
 </html>
