--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,5 @@
 <!doctype html>
-<html lang="en">
-    <icon>
-        
-    </icon>
+<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -15,8 +12,17 @@
     </head>
     <body>
         <canvas id="mainCanvas" width="800" height="600"></canvas>
+
+        <div class="ui">
+            <a onclick="clearBoard()">Clear board</a>
+        </div>
+
+        <div class="ui" id="console">
+            <input type="text">
+        </div>
         
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
