--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
         <canvas id="mainCanvas" width="800" height="600"></canvas>
 
         <div class="ui">
-            <a class="button" onclick="clearBoard()">Clear board</a>
+            <a class="button" onclick="clearOwnBoard()">Clear self</a>
+            <a class="button red" onclick="clearBoard()">Clear all</a>
             <br>
             <input id="color" type="text" placeholder="50,50,50">
             <br>
@@ -27,6 +28,7 @@
         </div>
         
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="js/main.js"></script>
     </body>
