Fix color changer

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
             <a class="button" onclick="clearOwnBoard()">Clear self</a>
             <a class="button red" onclick="clearBoard()">Clear all</a>
             <br>
-            <input id="color" type="text" placeholder="50,50,50">
+            <input id="color" type="text" placeholder="example: 50,50,50">
             <br>
             <a class="button" id="apply">Apply</a>
         </div>
