--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
         <link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Condensed|Ubuntu+Mono" rel="stylesheet">
     </head>
     <body>
-        <canvas id="mainCanvas" width="800" height="600"></canvas>
+        <canvas id="canvas" width="800" height="600"></canvas>
 
         <div class="ui">
             <a class="button" onclick="clearOwnBoard()">Clear self</a>
