--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,9 @@
             <br>
             <input id="color" type="text" placeholder="example: 50,50,50">
             <br>
+            <a class="timer" type="text">Timer: </a>
             <a class="button" id="apply">Apply</a>
+            <a class="button red" type="button" id="gameStart" onclick="gameStart()">Start game</a>
         </div>
 
         <div class="ui" id="console">
