Remove/add timer Removed socket.id replaced server.user

--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,12 @@
             <br>
             <input id="color" type="text" placeholder="example: 50,50,50">
             <br>
-            <a class="timer" type="text">Timer: </a>
+            Timer:
             <a class="button" id="apply">Apply</a>
-            <a class="button red" type="button" id="gameStart" onclick="gameStart()">Start game</a>
+            <a class="button red" id="gameStart" onclick="gameStart()">Start game</a>
         </div>
+
+
 
         <div class="ui" id="console">
             <ul></ul>
