Fix timer class Fix function start

--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,8 @@
             <br>
             <input id="color" type="text" placeholder="example: 50,50,50">
             <br>
-            Timer:
             <a class="button" id="apply">Apply</a>
-            <a class="button red" id="gameStart" onclick="gameStart()">Start game</a>
+            <a class="button red" onclick="gameStart()">Start game</a>
         </div>
 
 
