--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Canvas</title>
+        <title>Whiteboard</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Condensed|Ubuntu+Mono" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.css">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <canvas id="canvas" width="800" height="600"></canvas>
@@ -16,10 +17,14 @@
         <div class="ui">
             <a class="button" onclick="clearOwnBoard()">Clear self</a>
             <a class="button red" onclick="clearBoard()">Clear all</a>
-            <br>
-            <input id="color" type="text" placeholder="example: 50,50,50">
-            <br>
-            <a class="button" id="apply">Apply</a>
+            <h3>Name</h3>
+            <input id="name" type="text" placeholder="username">
+            <h3>Color</h3>
+            <span style="color: #555; margin-right: 6px">#</span>
+            <input id="color" type="text" style="width: 100px">
+            <h3>Size</h3>
+            <input id="size" type="number" style="width: 50px">
+            <span style="color: #555; margin-left: 6px">px</span>
         </div>
 
         <div class="ui" id="console">
@@ -31,5 +36,6 @@
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="js/main.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.js"></script>
     </body>
 </html>
