--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Whiteboard</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Condensed|Ubuntu+Mono" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.css">
@@ -20,10 +18,9 @@
             <h3>Name</h3>
             <input id="name" type="text" placeholder="username">
             <h3>Color</h3>
-            <span style="color: #555; margin-right: 6px">#</span>
             <input id="color" type="text" style="width: 100px">
             <h3>Size</h3>
-            <input id="size" type="number" style="width: 50px">
+            <input id="size" type="number" style="width: 50px" min="1" max="100">
             <span style="color: #555; margin-left: 6px">px</span>
         </div>
 
