Use lines for erasing

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 
         <div class="ui">
             <a class="button red" onclick="clearBoard()">Clear board</a>
+            <span id="indices"></span>
             <h3>Name</h3>
             <input id="name" type="text" placeholder="username">
             <h3>Color</h3>
